# FileShare

./: .gitignore  README.md
client/: .env.example  Cargo.toml  fsclient  update.sh
client/src/: main.rs  record.rs
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: log.rs  main.rs  server.rs
