[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
mime_guess = "2.0.4"
chrono = "0.4.31"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
copypasta = "0.10.0"
mime = "0.3.17"
notify-rust = "4"
indicatif = "0.17.7"
async-stream = "0.3.5"
futures-util = "0.3.30"