[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = { version = "0.3", default-features = false }
chrono = "0.4.31"
nanoid = "0.4.0"